--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Make site responsive on mobile/tablet -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>YelpPark</title>
         <!--the "/" means the file "app.css" should be found in the root directory-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -8,17 +10,24 @@
     </head>
     <body>
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="nav-header">
-                    <a class="navbar-brand" href="/">
-                        YelpPark
-                    </a>
-                </div>
-                <div class="collapse navbar-collapse">
+            <div class="container">
+                <div class="navbar-header">
+        			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-bar-demo" aria-expanded="false" aria-controls="navbar">
+        		    	<span class="sr-only">Toggle navigation</span>
+        		    	<span class="icon-bar"></span>
+        		    	<span class="icon-bar"></span>
+        		    	<span class="icon-bar"></span>
+        		    </button>
+        			<a href="/" class="navbar-brand">YelpPark</a>
+        		</div>
+                <div class="collapse navbar-collapse" id="nav-bar-demo">
+                    <ul class="nav navbar-nav">
+                        <li class="<%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <% if (!currentUser) { %>
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="/register">Signup</a></li>
+                            <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
+                            <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
                         <% } else { %>
                             <li><a href="#">Signed In As <%= currentUser.username %></a></li>
                             <li><a href="/logout">Logout</a></li>
