--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,7 +18,8 @@
                     <h4><a><%= campground.name%></a></h4>
                     <p><%= campground.description %></p>
                     <p>
-                        <em>Submitted By <%= campground.author.username %></em>
+                        <em>Submitted By <%= campground.author.username %>,
+                        <%= moment(campground.createdAt).fromNow() %></em>
                     </p>
                     <!--only the user that owns the post can see the buttons-->
                     <% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
@@ -38,7 +39,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <strong><%= comment.author.username %></strong>
-                            <span class="pull-right">10 days ago</span>
+                            <span class="pull-right"><%= moment(comment.createdAt).fromNow() %></span>
                             <p>
                                 <%= comment.text %>
                             </p>
